# wshterm

./: .gitignore  ChangeLog.md  README.md  shell.nix  ssh_local  wshterm.cabal  wsterm.cabal
src/: Main.hs
static/: hterm_all.js  index.html  wshterm.js
