name:                wshterm
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable wshterm
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.13, bytestring, websockets, process, async, posix-pty, binary, wai-websockets, warp, file-embed, wai-app-static, wai
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded
